<resources>
    <string name="app_name">detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="cuisine">Cuisine</string>
    <string name="currency">Currency</string>
    <string name="average_cost">Average Cost</string>
    <string name="facility">Facility</string>
    <string name="map">Map</string>
    <string name="menu">Menu</string>
    <string name="phone">Phone</string>
    <string name="photos">Photos</string>
    <string name="more_info">More Info</string>
    <string name="cost">%s %s</string>
    <string name="review">Review</string>
</resources>
